<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/auth_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_logo_margin" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="@dimen/default_screen_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/auth_il_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/auth_edit_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/auth_il_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/auth_il_email">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/auth_edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:paddingTop="@dimen/default_screen_padding"
            android:id="@+id/auth_ll_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/auth_il_password"
            android:orientation="horizontal">

            <Button
                style="@style/EntregoBorderlessButton"
                android:id="@+id/auth_btn_registration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_registration" />

            <Button
                android:id="@+id/auth_btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_login" />

        </LinearLayout>

        <Button
            style="@style/EntregoSacondaryButton"
            android:id="@+id/auth_forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/auth_ll_control"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/double_screen_padding"
            android:text="@string/ui_forgot_password" />


    </RelativeLayout>


</RelativeLayout>
