<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/edit_profile_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_profile_toolbar"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/double_screen_padding"
        app:srcCompat="@drawable/ic_user_profile_80dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_profile_logo"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            android:padding="@dimen/default_screen_padding"
            android:paddingTop="@dimen/double_screen_padding">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_profile_il_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_profile_edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_profile_edit_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_profile_il_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_profile_edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_profile_il_phone_code" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_profile_il_phone_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_profile_edit_phone_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical|center_horizontal"
                        android:hint="@string/hint_phone_code"
                        android:inputType="phone"
                        android:minWidth="60dp"
                        android:nextFocusDown="@+id/edit_profile_edit_phone"
                        android:text="380" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_profile_il_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_profile_edit_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone"
                        android:inputType="phone"
                        android:nextFocusDown="@+id/edit_profile_btn_ok" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/edit_profile_change_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@drawable/ic_key_24dp"
                    android:drawablePadding="10dp"
                    android:text="@string/btn_change_password" />

                <Button
                    android:id="@+id/edit_profile_btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ui_save" />

            </LinearLayout>


            <LinearLayout
                android:visibility="gone"
                android:id="@+id/edit_profile_ll_passwords"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_profile_il_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_profile_edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:nextFocusDown="@+id/edit_profile_edit_password_conf" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/edit_profile_il_password_conf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/edit_profile_edit_password_conf"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_password_conf"
                        android:inputType="textPassword"
                        android:nextFocusDown="@+id/edit_profile_phone_codes" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:visibility="gone"
                android:layout_gravity="right"
                android:id="@+id/edit_profile_btn_save_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_password" />
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/edit_profile_toolbar"
        layout="@layout/navigation_toolbar" />


</RelativeLayout>
