<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_edit_vechile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="entrego.com.entrego.ui.main.account.vehicle.edit.EditVehicleActivity">


    <ImageView
        android:id="@+id/edit_vehicle_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_vehicle_toolbar"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/double_screen_padding"
        app:srcCompat="@drawable/ic_car_black_80dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_vehicle_logo"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/default_screen_padding"
            android:paddingTop="@dimen/double_screen_padding">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_vehicle_il_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_vehicle_edit_brand"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_brand"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_vehicle_edit_model" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_vehicle_il_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_vehicle_edit_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_model"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_vehicle_edit_year" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_vehicle_il_phone_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_vehicle_il_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_vehicle_edit_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_year"
                    android:maxLines="1"
                    android:inputType="phone"
                    android:nextFocusDown="@+id/edit_vehicle_edit_cylinders" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_vehicle_il_cylinders"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_vehicle_edit_cylinders"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cylinders"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_vehicle_edit_model" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/edit_vehicle_il_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/edit_vehicle_edit_plate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_plate"
                    android:maxLines="1"
                    android:nextFocusDown="@+id/edit_vehicle_btn_save" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_gravity="right"
                android:id="@+id/edit_vehicle_btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ui_save" />


        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/edit_vehicle_toolbar"
        layout="@layout/navigation_toolbar" />


</RelativeLayout>
