<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:fitsSystemWindows="true">


    <ImageView
        android:id="@+id/splash_welcome_pic"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="-40dp"
        android:layout_marginTop="-20dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/welcome_pic"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/double_screen_padding"
        app:srcCompat="@drawable/small_logo_white" />

    <LinearLayout
        android:layout_marginBottom="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:paddingLeft="@dimen/default_screen_padding"
        android:paddingRight="@dimen/default_screen_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_registration"
                android:theme="@style/WhiteButton"
                android:id="@+id/welcome_registr_btn" />

            <Button
                android:id="@+id/welcome_login_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ui_login"
                android:theme="@style/WhiteButton" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/default_screen_padding"
            android:text="@string/welcome_logo"
            android:layout_gravity="center"
            android:textSize="@dimen/tsize_medium"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
</RelativeLayout>
